syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "PartService.proto";
import "TrayService.proto";
option java_multiple_files = true;
package com.sep3yg9.assignment2.grpc.protobuf.products;

message Product {
  int64 id = 1;
  string productType = 2;
  repeated protobuf.parts.PartTray toc = 3;
}

message ProductList {
  repeated Product products = 1;
}

message PartProduct {
  int64 partId = 1;
  int64 productId = 2;
}

message AnimalList {
  repeated int64 animalIds = 1;
}

service ProductService {
  rpc GetAllFinishedTrays(google.protobuf.Empty) returns (com.sep3yg9.assignment2.grpc.protobuf.trays.TrayList);
  rpc GetAllProducts(google.protobuf.Empty) returns (ProductList);
  rpc CreateProduct(google.protobuf.StringValue) returns (Product);
  rpc PutIntoProduct(PartProduct) returns (Product);
  rpc MarkProductAsFinished(google.protobuf.Int64Value) returns (Product);
  rpc GetProductsAnimals(google.protobuf.Int64Value) returns (AnimalList);
  rpc GetAnimalsProducts(google.protobuf.Int64Value) returns (ProductList);
}